--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,17 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=block');
+@import url('https://fonts.googleapis.com/css2?family=Concert+One&display=block');
 
 :root {
-  --header-font: 'Oswald', sans-serif;
   --dark-one: #111;
-  --dark-two: #333;
-  --light-zero: #fff;
-  --light-one: #eee;
+  --dark-two: #000;
+  --light-one: #fff;
   --light-two: #dedede;
-  --link-color: #8ca900;
-  --hover-color: #ffc066;
-  --shadow-color: rgb(0 0 0 / 10%);
-  --padding-one: 3.2rem;
-  --padding-two: 4rem;
+  --link-color: #fff;
+  --basic-color: #0064ad;
+  --premium-color: #941cbf;
+  --padding-small: 1.6rem;
+  --padding-medium: 3.2rem;
+  --padding-large: 4rem;
+  --body-font: Verdana, Arial, sans-serif;
+  --heading-font: 'Concert One', sans-serif;
 }
 
 /* _Normalize */
@@ -32,7 +33,7 @@ input[type="number"] {
 }
 
 textarea {
-  resize: none;
+  resize: vertical;
 }
 
 /* _Global */
@@ -44,70 +45,135 @@ html {
 body {
   width: 100%;
   background: var(--dark-one);
-  color: var(--light-one);
-  overflow-x: hidden;
+  color: var(--light-two);
+  text-align: center;
 }
 
 body,
-select,
 textarea,
 input,
 button {
   font-size: 1.6rem;
   line-height: 1.7;
-  font-family: Verdana, sans-serif;
+  font-family: var(--body-font);
 }
 
-select,
 textarea,
 input,
 button,
 p,
-ul,
-ol {
-  margin-bottom: 1.6rem;
+fieldset,
+.select-slideshow,
+.tos {
+  margin-bottom: var(--padding-small);
 }
 
-select,
+/* _Interactive Global */
+
 textarea,
-input,
+input:not([type="radio"]):not([type="checkbox"]),
 button {
-  border-radius: .2rem;
-  padding: .4rem 1.4rem
+  border-radius: .8rem;
+  padding: .4rem 1.4rem;
 }
 
-select,
 textarea,
-input {
+input:not([type="radio"]):not([type="checkbox"]) {
   width: 100%;
-  color: (--dark-two);
-  background: (--light-one);
+  color: var(--light-one);
+  background: var(--dark-two);
+  outline: .2rem solid var(--basic-color);
+  text-align: center;
 }
 
-ol,
-ul {
-  padding-left: 3.2rem;
+.premium textarea,
+.premium input:not([type="radio"]):not([type="checkbox"]) {
+  outline-color: var(--premium-color);
 }
 
-img {
-  max-width: 100%;
-  display: block;
+input[type="radio"],
+input[type="checkbox"] {
+  appearance: none;
+  -webkit-appearance: none;
+  height: 2.4rem;
+  width: 2.4rem;
+  outline: .2rem solid var(--basic-color);
 }
 
-/* _Global Buttons and Links */
+input[type="radio"] {
+  margin: .1rem .8rem 0 2.4rem;
+  border: .3rem solid var(--dark-one);
+  border-radius: 50%;
+}
+
+input[type="checkbox"] {
+  outline: .2rem solid var(--basic-color);
+  margin-top: .1rem;
+  flex-shrink: 0;
+  border-radius: .2rem;
+  margin-right: var(--padding-small);
+}
+
+input[type="radio"]:hover,
+input[type="checkbox"]:hover,
+.radio label:hover
+.checkbox label:hover {
+  cursor: pointer;
+}
+
+input[type="radio"]:checked {
+  background-color: var(--link-color);
+}
+
+input[type="checkbox"]:checked {
+  background: url('/img/checkmark.png') no-repeat center center / 1.8rem;
+}
+
+textarea {
+  height: 20rem;
+}
+
+fieldset {
+  width: 100%;
+}
+
+.tos,
+label:not(.small),
+button[type="submit"] {
+  font-size: 2.4rem;
+  font-family: var(--heading-font);
+  text-transform: none;
+}
+
+label:not(.small) {
+  margin-bottom: .8rem;
+}
+
+:focus,
+button:hover {
+  outline: .3rem solid var(--link-color) !important;
+}
 
 button {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: 3.6rem;
   min-width: 3.6rem;
   font-weight: normal;
-  letter-spacing: .1rem;
   text-transform: uppercase;
   text-decoration: none;
-  background-color: var(--link-color);
-  color: var(--light-zero);
+  background-color: var(--basic-color);
+  color: var(--link-color);
+}
+
+button[type="submit"] {
+  margin-top: var(--padding-small);
+}
+
+.premium button {
+  background-color: var(--premium-color);
 }
 
 button svg,
@@ -115,100 +181,74 @@ button .svg-inline--fa {
   font-size: 2rem;
 }
 
-button:hover,
 button:hover {
   cursor: pointer;
-  background-color: var(--hover-color);
-  color: var(--dark-one);
 }
 
 a {
   color: var(--link-color);
 }
 
-a:hover,
-a:focus {
-  color: var(--hover-color);
+/* _Noninteractive Global */
+
+ol,
+ul {
+  padding-left: var(--padding-large);
 }
 
-/* _Global Headers and Titles */
+img {
+  max-width: 100%;
+  display: block;
+}
 
 h1,
 h2,
 h3 {
   line-height: 1;
-  font-family: var(--header-font);
-  font-weight: 300;
+  font-family: var(--heading-font);
+  margin-bottom: var(--padding-medium);
   text-transform: uppercase;
-  margin-bottom: var(--padding-one);
+  color: var(--light-two);
+  font-weight: normal;
+  letter-spacing: .01em;
 }
 
 h1 {
-  font-size: 3.9rem;
-  text-align: center;
+  font-size: 4.2rem;
+}
+
+h1 img {
+  width: 100%;
+  max-width: 26rem;
+  margin: auto;
 }
 
 h2 {
-  font-size: 3.6rem;
-  margin: var(--padding-one) 0;
-  clear: both;
+  font-size: 3.8rem;
 }
 
-h3 {
-  font-size: 3.3rem;
-  margin: var(--padding-one) 0;
-  clear: both;
-}
-
-/* _Global Classes */
-
-.container {
-  width: 100%;
-}
-
-.content {
-  margin: 0 auto;
-  padding: var(--padding-two) var(--padding-one);
-}
-
-@media screen and (width <=767px) {
-  .content {
-    flex-direction: column;
-    padding-left: 1.6rem;
-    padding-right: 1.6rem;
-  }
-}
-
-.field {
-  width: 100%;
-}
+/* _Useful Classes */
 
 .flex {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  width: 100%;
+  justify-content: center;
 }
 
-.inner {
-  /* max width of layout */
-  width: 100%;
-  max-width: 110rem;
-  margin: auto;
+.required {
+  font-family: var(--body-font);
+  font-size: 1.6rem;
+  margin-left: .8rem;
 }
 
-.input-with-button {
-  display: flex;
-  width: 100%;
+.radio {
+  align-items: flex-start;
 }
 
-.input-with-button button,
-.sheet .input-with-button button {
-  margin: 0 0 1.6rem .8rem;
-}
-
-.input-with-button input {
-  flex-grow: 1;
+.checkbox {
+  flex-wrap: nowrap !important;
+  text-align: left;
+  margin-bottom: var(--padding-small);
 }
 
 @keyframes spin {
@@ -225,48 +265,6 @@ h3 {
   animation: spin 1s linear infinite;
 }
 
-.target {
-  display: block;
-  content: " ";
-  margin-top: calc(0rem - var(--nav-height));
-  height: var(--nav-height);
-  visibility: hidden;
-}
-
-.sheet {
-  padding: var(--padding-two) var(--padding-one);
-  margin: 0 auto;
-  width: 100%;
-  box-shadow: 2rem 2rem 3rem var(--shadow-color);
-}
-
-.section.sheet {
-  padding: unset;
-  margin: unset;
-  box-shadow: unset;
-}
-
-.sheet button {
-  margin: 1.6rem auto 0;
-}
-
-/* _Footer */
-
-footer {
-  margin-top: auto;
-  background-color: var(--shade-three);
-}
-
-footer .inner {
-  max-width: 100%;
-}
-
-footer .content {
-  display: flex;
-  justify-content: flex-start;
-  padding: calc(var(--padding-two) - 1.6rem) 1.6rem;
-}
-
 /* _Layout */
 
 main {
@@ -277,81 +275,94 @@ main {
   align-items: center;
 }
 
-main .container {
-  overflow: hidden;
-  position: relative;
-}
-
-/* _Prompts */
-
-.prompt-container {
-  position: fixed;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: -1;
-  height: 100%;
+.section {
   width: 100%;
-  top: 0;
-  left: 0;
-  padding: var(--padding-one);
-  background: rgb(13 13 30 / 60%);
-  opacity: 0;
-  transition: opacity .2s;
+  height: auto;
 }
 
-.active.prompt-container {
-  z-index: 100000;
-  opacity: 1;
+.section:nth-of-type(2n) {
+  background: var(--dark-two);
 }
 
-.prompt {
-  position: relative;
+.inner {
+  /* max width of layout */
+  width: 100%;
+  max-width: 110rem;
+  margin: auto;
+}
+
+.content {
+  margin: 0 auto;
+  padding: var(--padding-large) var(--padding-medium) calc(var(--padding-large) - var(--padding-small));
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: var(--padding-one) var(--padding-one) 1.6rem;
-  box-shadow: 10px 10px 90px rgb(0 0 51 / 20%);
-  background: #fff;
+  width: 100%;
+  max-width: 70rem;
+  margin: auto;
 }
 
-.prompt button {
-  margin-bottom: 1.6rem;
-  margin-top: 0;
+.narrow {
+  max-width: 60rem;
 }
 
-.prompt button.close {
+@media screen and (width <=767px) {
+  .content {
+    flex-direction: column;
+    padding-left: var(--padding-small);
+    padding-right: var(--padding-small);
+  }
+}
+
+/* _Slideshow Type */
+
+.select-slideshow button {
+  text-transform: none;
+  width: 16rem;
+  padding: 1.2rem .4rem var(--padding-small);
+  margin: 0 var(--padding-small) var(--padding-medium) !important;
+  position: relative;
+}
+
+.select-slideshow button[aria-checked="true"]::after {
+  content: '';
+  background: #000 url('/img/checkmark.png') no-repeat top .9rem center / 2rem;
+  filter: invert(100);
   position: absolute;
-  right: 0;
-  top: 0;
-  color: var(--link-color);
-  background: transparent;
+  bottom: -1rem;
+  right: -1rem;
+  height: 3.2rem;
+  width: 3.2rem;
+  border-radius: 50%;
 }
 
-.prompt button.close:hover,
-.prompt button.close:focus {
-  color: var(--hover-color) !important;
-  background: transparent !important;
+.select-slideshow .type {
+  font-family: var(--heading-font);
+  font-size: 3rem;
+  letter-spacing: .01em;
+  line-height: 1.3;
 }
 
-.prompt h2:first-of-type {
-  margin-top: 0;
-  margin-bottom: 1.6rem;
+.select-slideshow .price {
+  font-size: 1.8rem;
 }
 
-#img-prompt .prompt .select {
-  margin: 0 0 3.2rem;
+.select-slideshow .dollar {
+  font-size: 2rem;
 }
 
-#expiration-prompt p {
-  max-width: 30rem;
-  text-align: center;
+#select-basic {
+  background-color: var(--basic-color);
+}
+
+#select-premium {
+  background-color: var(--premium-color);
 }
 
 /* _Alerts and Errors */
 
-p[role="alert"] {
-  padding: 1.6rem;
+/*p[role="alert"] {
+  padding: var(--padding-small);
   transition: height .2s, opacity .2s, margin .2s, padding .2s;
   width: 100%;
 }
@@ -382,71 +393,16 @@ p.success {
 }
 
 #alerts p:first-of-type {
-  margin-top: var(--padding-two);
+  margin-top: var(--padding-large);
 }
 
 #alerts p:last-of-type {
-  margin-bottom: var(--padding-two);
-}
-
-/* _Pages */
-
-.sections {
-  height: auto;
-  width: 100%;
-}
-
-/* _Sections */
-
-h2.section-title {
-  margin-top: 0;
-}
-
-.section {
-  background: var(--dark-two);
-}
-
-.section h3:first-child {
-  margin-top: 0;
-}
-
-.section:nth-of-type(2n) {
-  background: var(--dark-one);
-}
-
-.section .sheet {
-  background: var(--shade-three);
-}
-
-.section .content form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  max-width: 60rem;
-  margin: 3.2rem auto 0;
-}
-
-.section .content textarea {
-  height: 20rem;
-}
-
-/* _Upload Form */
-
-.upload-media {
-  transition: margin-top .2s, height .2s;
-  margin-top: var(--padding-one);
-  overflow: hidden;
-}
-
-.initial .upload-media {
-  margin-top: 0;
-  height: 0;
-}
+  margin-bottom: var(--padding-large);
+}*/
 
 /* _Gallery */
 
-.gallery {
+/*.gallery {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
@@ -509,11 +465,11 @@ h2.section-title {
 .gallery a.edit.button {
   color: #fff;
   margin-right: 0;
-}
+}*/
 
 /* _Media Library Prompt */
 
-#media-library .prompt {
+/*#media-library .prompt {
   width: 100%;
   height: 100%;
 }
@@ -528,7 +484,7 @@ h2.section-title {
   overflow-y: scroll;
   margin: 3.2rem 0;
   padding: 1.2rem;
-  border: 1px solid #eee;
+  border: .1rem solid #eee;
   background: #F9F8F5;
 }
 
@@ -577,37 +533,4 @@ a.selector:hover .button,
 a.selector:focus .button,
 a.selected .button {
   opacity: 1;
-}
-
-a.selected .button {
-  background-color: var(--hover-color);
-}
-
-/* _Contact */
-
-.contact.section .inner {
-  margin: auto;
-}
-
-.contact .sheet {
-  text-align: center;
-}
-
-/* _Video */
-
-.video {
-  position: relative;
-  padding: 0 0 56.25% !important;
-  height: 0;
-  margin: 0 0 var(--padding-one);
-  clear: both;
-}
-
-.video > iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: 0;
-}
+}*/
