--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -115,7 +115,7 @@ input[type="checkbox"] {
   outline-color: var(--premium-color);
 }
 
-input[type="radio"]:hover,
+input[type="radio"]:nover,
 input[type="checkbox"]:hover,
 .radio label:hover,
 .checkbox label:hover {
@@ -152,6 +152,8 @@ label:not(.small) {
 }
 
 :focus,
+input:hover,
+textarea:hover,
 button:hover {
   outline: .3rem solid var(--link-color) !important;
 }
@@ -380,6 +382,84 @@ label[for="select-premium"] {
   outline: .2rem solid var(--premium-color);
 }
 
+/* _Add Images Preview */
+
+input[type="file"] {
+  display: none;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  padding: var(--padding-small);
+  background: var(--dark-one);
+  border-radius: .8rem;
+  padding: var(--padding-small);
+  margin: -.4rem;
+  width: calc(100% + .8rem);
+  margin-bottom: calc(var(--padding-small) - .4rem);
+}
+
+.gallery-item {
+  position: relative;
+  margin: .4rem;
+  width: calc(25% - .8rem);
+}
+
+.gallery-item::after {
+  content: "";
+  display: block;
+  padding-bottom: 100%;
+}
+
+@media screen and (width <=767px) {
+  .gallery-item {
+    width: calc(33.33% - .8rem);
+  }
+}
+
+@media screen and (width <=420px) {
+  .gallery-item {
+    width: calc(50% - .8rem);
+  }
+}
+
+.gallery-item img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+label[for="add-images"] {
+  border-radius: .8rem;
+  width: 6rem;
+  height: 6rem;
+  display: block;
+  outline: transparent;
+  position: absolute;
+  top: calc(50% - 3rem);
+  left: calc(50% - 3rem);
+  background: var(--basic-color);
+}
+
+.premium label[for="add-images"] {
+  background: var(--premium-color);
+}
+
+label[for="add-images"]:hover {
+  outline: .3rem solid var(--link-color);
+  cursor: pointer;
+}
+
+label[for="add-images"] img {
+  width: 4rem;
+  height: 4rem;
+  object-fit: contain;
+  top: calc(50% - 2rem);
+  left: calc(50% - 2rem);
+}
+
 /* _Alerts and Errors */
 
 /*p[role="alert"] {
@@ -423,55 +503,7 @@ p.success {
 
 /* _Gallery */
 
-/*.gallery {
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  width: calc(100% + .8rem);
-  margin: -.4rem;
-  padding: 0;
-}
-
-.gallery li {
-  position: relative;
-  width: calc(16.66% - .8rem);
-  margin: .4rem;
-  overflow: hidden;
-  background-color: #eee;
-}
-
-.gallery li::after {
-  content: "";
-  display: block;
-  padding-bottom: 100%;
-}
-
-@media screen and (width <=991px) {
-  .gallery li {
-    width: calc(25% - .8rem);
-  }
-}
-
-@media screen and (width <=767px) {
-  .gallery li {
-    width: calc(33.33% - .8rem);
-  }
-}
-
-@media screen and (width <=420px) {
-  .gallery li {
-    width: calc(50% - .8rem);
-  }
-}
-
-.gallery li img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.gallery li .actions {
+/*.gallery li .actions {
   position: absolute;
   top: 0;
   width: 100%;
