--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -503,13 +503,33 @@ label[for="add-images"]:hover img {
   top: 0;
   right: 0;
   border-radius: 0 0 0 .4rem;
-  min-width: 3rem;
-  min-height: 3rem;
+  min-width: 2.6rem;
+  min-height: 2.6rem;
 }
 
 .delete img {
-  width: 1.8rem;
-  height: 1.8rem;
+  width: 1.6rem;
+  height: 1.6rem;
+}
+
+.move {
+  position: absolute;
+  top: calc(50% - 2.2rem);
+  left: calc(50% - 2.2rem);
+  width: 4.4rem;
+  height: 4.4rem;
+  border-radius: 50%;
+}
+
+.move img {
+  height: 3rem;
+  object-fit: contain;
+  left: -.2rem;
+}
+
+.thumb-action:focus {
+  outline: none !important;
+  box-shadow: 0 0 0 .3rem var(--link-color), 0 0 0 .6rem var(--dark-two);
 }
 
 /* _Alerts and Errors */
